Fix header/map heights to avoid overlapping
Tracker container was overlapping

--- a/style.css
+++ b/style.css
@@ -18,27 +18,27 @@ body {
 html {
   font-size: 62.5%;
 }
-header {
-  margin: 0 auto;
+.header {
+  /* margin: 0 auto; */
   background: center/cover no-repeat url(images/pattern-bg-desktop.png);
   position: relative;
-  height: 35vh;
-  padding: 4rem;
+  min-height: 30vh;
+
+  padding: 6rem;
 }
-.heading {
+.heading-primary {
   color: var(--White);
   font-size: 3.4rem;
   margin-bottom: 3rem;
-  font-weight: 500;
   text-align: center;
+  font-weight: 500;
 }
-.search {
-  width: 100%;
-  margin: 0 auto;
+.header__search-box {
   display: flex;
-  align-items: stretch;
-  justify-content: center;
+  width: 100%;
   max-width: 56rem;
+  margin: 0 auto;
+  margin-bottom: 6rem;
 }
 .input--search {
   padding-left: 2rem;
@@ -55,12 +55,11 @@ header {
   background-color: var(--Very-Dark-Gray);
   cursor: pointer;
 }
-.btn--search::placeholder {
-  font-size: 1.8rem;
-}
-.input--search,
+
+.input--search:focus,
 .btn--search:focus {
   outline: none;
+  box-shadow: 0 1rem 3rem rgb(51, 51, 51, 0.3);
 }
 .tracker--information {
   position: absolute;
@@ -74,7 +73,7 @@ header {
   padding: 3rem 2rem;
   background-color: var(--White);
   border-radius: 20px;
-  z-index: 999;
+  z-index: 9999;
 }
 .ip--address,
 .location,
@@ -102,9 +101,8 @@ header {
   font-weight: 500;
 }
 
-main {
-  /* height: 100%; */
-  height: 65vh;
+.map-container {
+  height: 80vh;
   position: relative;
 }
 #map {
@@ -137,12 +135,13 @@ main {
   }
 }
 @media (max-width: 800px) {
-  header {
-    height: 45vh;
+  .header {
+    padding-bottom: 10rem;
   }
-  main {
-    height: 55vh;
+  .header__search-box {
+    margin-bottom: 10rem;
   }
+
   .tracker--heading {
     text-align: center;
   }
